# versusvirus

./: Brainstorming  Brainstorming.md  CMakeLists.txt  COVID predictor presentation.odp  README.md
Data/: .~lock.CommutingData.xlsx#  .~lock.Grenzgänger.xlsx#  .~lock.Population in towns.xlsx#  .~lock.regionalporträts_gemeinde.xlsx#  AdditionalHouseholds.csv  Arbeitsstätten und Beschäftigte nach Jahr, Kanton, Wirtschaftsabteilung und Variable.xlsx  COVID total_cases and deaths per country and day.csv  CommutingDistances.xlsx  CompanySizes.xlsx  Datenauswertungen_01-03-20_bis_29-03-20_vlg_2019.xlsx  Demografische Bilanz nach Demografische Komponente, Kanton, Staatsangehörigkeit (Kategorie), Geschlecht, Alter und Jahr.xlsx  Education.xlsx  Gesundheit_Internationaler_Vergleich.xlsx  Grenzgänger.xlsx  HouseholdData2014.xlsx  HouseholdDivision.xlsx  Households2014.csv  Kantonale_Eigenschaften_nach_Kategorie.xlsx  KiTa and others.xlsx  Population in towns.xlsx  PopulationData2014.csv  Risikogruppen nach Anzahl Personen.xlsx  SSVZ2005_Daten.mdb  Tourism by country of origin.xlsx  Vorerkrankungen nach Altersgruppe.xlsx  Vorerkrankungen nach Kanton.xlsx  Vorerkrankungen nach sozialdemografik.xlsx  Wohnbevölkerung nach Jahr, Kanton, Staatsangehörigkeit und Geschlecht.xlsx  regionalporträts_gemeinde.xlsx  weather daily in basel from 01032020.csv  weather daily in zurich from 21032020.csv
Modelling/: Modelling_resources  Readme.md
VersusVirus_Presentation/: COVID predictor presentation-1.odp
data/: CommutePairs.csv
src/: .gitignore  CMakeLists.txt  InitializeHouseholds.cpp  (+18 more)
(+22 files in other folders)
